# RV32I-Sim

./: .gitmodules  CMakeLists.txt  Dockerfile  api.s  main.cpp
include/: BitHelpers.hpp  Debugger.hpp  Decoder.hpp  ElfLoader.hpp  Encoder.hpp  Formats.hpp  HandlerFactory.hpp  Handlers.hpp  InstrInfo.hpp  Instruction.hh  IntTypes.hh  IntTypes.hpp  Interpreter.hpp  InterpreterState.hpp  Memory.hpp  Opcodes.hpp  Opearations.hpp  Status.hpp  Syscall.hpp  arena.hh  cpu.hh  instructions.hh  memory.hh  regfile.hh
source/: BitHelpers.cpp  Decoder.cpp  ElfLoader.cpp  Handlers.cpp  Syscall.cpp  instructions.cc  main.cc  main.cpp  memory.cc
tests/source/: test_instructions.cpp
